DDBNEXT-833-bag: changed css to fix problems in layout when user changes the size of window (buttons overlap, are too big, icons overlap, etc....)

--- a/web-app/css/favorites.css
+++ b/web-app/css/favorites.css
@@ -52,6 +52,9 @@ hr {
   z-index: 10;
   display: block;
   padding: 0 35% 0 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .bookmarks-list-envelope, .bookmarks-list-edit, .bookmarks-list-number, .bookmarks-list-delete {
@@ -62,12 +65,12 @@ hr {
 
 .bookmarks-list-number {
   text-align: center;
-  margin-right: 75px;
+  margin-right: 33px;
 }
 
 .bookmarks-list-envelope {
   margin-top: 1px;
-  margin-right: 50px;
+  margin-right: 7px;
 }
 
 .bookmarks-list-delete {
@@ -166,7 +169,7 @@ hr {
 
 .favorites-results-controls .deleteBtn{
   float:left;
-  margin-right: 10px;
+  margin-right: 50px;
 }
 
 .results-sorter .icon-arrow-up, .results-sorter .icon-arrow-down{
@@ -442,10 +445,13 @@ hr {
      display: inline;
    }
    .bookmarks-container .bookmarks-list-envelope {
-        padding-right: 10px;
+        padding-right: 0px;
    }
    .bookmarks-container .bookmarks-list-number {
-        padding-right: 50px;
+        padding-right: 0px;
+   }
+   #folder-create .submit{
+   		width: 165px;
    }
 }
 
